[gd_scene load_steps=7 format=3 uid="uid://cdumkmia83xpc"]

[ext_resource type="Script" uid="uid://jy2nxpy30h3f" path="res://scripts/minigames/labs/sql/sql_minigame.gd" id="1_8o5js"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.145098, 0.145098, 0.14902, 1)
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.235294, 0.235294, 0.235294, 1)
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 10.0
content_margin_bottom = 10.0
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_left = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0, 0, 0, 0)
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0, 0.478431, 0.8, 1)
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="SystemFont" id="SystemFont_1"]
font_names = PackedStringArray("JetBrains Mono", "Menlo", "Consolas", "Courier New", "Courier")
font_weight = 400

[sub_resource type="SystemFont" id="SystemFont_2"]
font_names = PackedStringArray("JetBrains Mono", "Menlo", "Consolas", "Courier New", "Courier")
font_weight = 600

[node name="SQL_Terminal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8o5js")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="Layout"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TitleLabel" type="Label" parent="Layout/TopBar"]
layout_mode = 2
text = "SQL Editor - Query_Console_1.sql"
theme_override_fonts/font = SubResource("SystemFont_1")
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="MainContent" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftSidebar" type="PanelContainer" parent="Layout/MainContent"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TaskInfo" type="VBoxContainer" parent="Layout/MainContent/LeftSidebar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Layout/MainContent/LeftSidebar/TaskInfo"]
layout_mode = 2
text = "ЗАДАНИЕ"
theme_override_fonts/font = SubResource("SystemFont_2")
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="Description" type="Label" parent="Layout/MainContent/LeftSidebar/TaskInfo"]
layout_mode = 2
text = "Описание задания"
autowrap_mode = 3
theme_override_fonts/font = SubResource("SystemFont_1")
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="EditorArea" type="VBoxContainer" parent="Layout/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="QueryEditor" type="PanelContainer" parent="Layout/MainContent/EditorArea"]
layout_mode = 2
custom_minimum_size = Vector2(0, 110)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="QueryFlow" type="HBoxContainer" parent="Layout/MainContent/EditorArea/QueryEditor"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="WordBank" type="PanelContainer" parent="Layout/MainContent/EditorArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="WordGrid" type="GridContainer" parent="Layout/MainContent/EditorArea/WordBank"]
layout_mode = 2
columns = 6
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Footer" type="PanelContainer" parent="."]
layout_mode = 1
custom_minimum_size = Vector2(0, 28)
anchors_preset = 15
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4")

[node name="StatusLabel" type="Label" parent="Footer"]
layout_mode = 2
text = "Line 1, Col 1 | UTF-8 | SQL"
theme_override_fonts/font = SubResource("SystemFont_1")
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="DragLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
